Do not parse caption-side: left / right as valid CSS.

We don't support it, and it's confusing to claim we do.

BUG=710734

Review-Url: https://codereview.chromium.org/2821073002
Cr-Commit-Position: refs/heads/master@{#465173}

Former-commit-id: 4af5b86049ac7e3b8fb3db9b5cb9383386dd7bbe